<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_tvshow"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ppt_12"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/title_tv_show"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_title"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_category"/>
        <TextView
            android:id="@+id/tv_descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:layout_below="@id/tv_date"
            android:lines="3"
            android:ellipsize="end"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>



</android.support.v7.widget.CardView>