<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/card_movies"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:text="@string/name_movie"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_date"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_date"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_rate"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_descrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_rate"
            android:layout_toRightOf="@id/img_photo"
            android:layout_toEndOf="@id/img_photo"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:text="@string/tv_descrip"
            android:lines="3"
            android:ellipsize="end"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>